test/invalid/syntactic/operator_as_name.sysml
// INVALID: operator cannot be used as a definition name
// EXPECTED: Parse error
part def + { }
